Major structural changes vis deletion of `get_model`

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -22,20 +22,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models = { # This dictionary contains the units for the fluxes and production function\n",
-    "    \"Guttler14\": {  # Units of the Guttler 2014 paper\n",
-    "        \"production_rate_units\": \"atoms/cm^2/s\",    # Units of the production rate \n",
-    "        \"flow_rate_units\": \"Gt/yr\"                  # Units of the fluxes\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
@@ -55,29 +41,13 @@
    "outputs": [],
    "source": [
     "carbon_box_model = load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
-    "    model,  # Name of the model as looped from the models dictionary \n",
-    "    production_rate_units=models[model][\"production_rate_units\"], \n",
-    "    flow_rate_units=models[model][\"flow_rate_units\"])\n",
+    "    \"Guttler14\",                        # Selecting an arbitrary model \n",
+    "    production_rate_units=\"atoms/cm^2/s\" # Units of the model\n",
+    ")\n",
     "\n",
     "bayesian_model = SingleFitter(carbon_box_model)   # Fitting a model \n",
     "bayesian_model.prepare_function(model=\"simple_sinusoid\") # Generating the simple sin model\n",
-    "bayesian_model.load_data(datum)   # Loading the data into the model  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_model(model: str, datum: str):\n",
-    "    \"\"\"\n",
-    "    Using a `ticktack.SingleFitter` this function compiles the model and selects the appropriate production function.\n",
-    "    \"\"\"\n",
-    "        \n",
-    "\n",
-    "\n",
-    "    return bayesian_model"
+    "bayesian_model.load_data(data_sets[8])   # Loading the data into the model  "
    ]
   },
   {
