--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -40,9 +40,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "carbon_box_model = load_presaved_model( # Generating the CarbobBoxModel using ticktack\n",
-    "    \"Guttler14\",                        # Selecting an arbitrary model \n",
-    "    production_rate_units=\"atoms/cm^2/s\" # Units of the model\n",
+    "carbon_box_model = load_presaved_model(     # Generating the CarbobBoxModel using ticktack\n",
+    "    \"Guttler14\",                            # Selecting an arbitrary model \n",
+    "    production_rate_units=\"atoms/cm^2/s\"    # Units of the model\n",
     ")\n",
     "\n",
     "bayesian_model = SingleFitter(carbon_box_model)   # Fitting a model \n",
@@ -52,25 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_production_function(model: SingleFitter):\n",
-    "    \"\"\"\n",
-    "    Parameters:\n",
-    "        model: `str` - The `CarbonBoxModel` that is to be used\n",
-    "        data: `str` - The dataset that the production function is to be fitted to (.csv)\n",
-    "    Returns:\n",
-    "        production: `function` - The ideal production function \n",
-    "    \"\"\"\n",
-    "\n",
-    "    default_params = array([775., 1./12, pi/2., 81./12])\n",
-    "    sampler = model.MarkovChainSampler(default_params, \n",
-    "        likelihood=model.log_joint_simple_sinusoid,\n",
-    "        args=(array([770., 0., -pi, 0.]), array([780., 5., pi, 15.])))\n",
-    "    \n",
-    "    return mean(sampler, axis=0)"
+    "mcmc_samples = bayesian_model.MarkovChainSampler(\n",
+    "    array([775., 1./12, pi/2., 81./12]), \n",
+    "    likelihood=bayesian_model.log_joint_simple_sinusoid,\n",
+    "    args=(array([770., 0., -pi, 0.]), array([780., 5., pi, 15.])))\n",
+    "mean(mcmc_samples, axis=0)"
    ]
   },
   {
