Re-structuring the code by adding `get_template_parameters`

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from os import walk, getcwd\n",
+    "from os import getcwd\n",
     "from ticktack.fitting import SingleFitter\n",
     "from ticktack import load_presaved_model\n",
     "from jax.numpy import array, pi, mean"
@@ -22,16 +22,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_sets = []  # List for storing the data set locations\n",
-    "data_sets_directory = f\"{getcwd()}/datasets/775AD\" # Home directory of the data \n",
-    "for (root, dirs, files) in walk(data_sets_directory):    # Looping over directories \n",
-    "    for file in files:  # Looping through the files \n",
-    "        file_path = root + \"/\" + file   # Setting up the path \n",
-    "        data_sets.append(file_path)  # Extending the stored directoriess"
+    "def get_template_parameters(carbon_box_model):\n",
+    "    bayesian_model = SingleFitter(carbon_box_model)   # Fitting a model \n",
+    "    bayesian_model.prepare_function(model=\"simple_sinusoid\") # Generating the simple sin model\n",
+    "    bayesian_model.load_data(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\")   \n",
+    "\n",
+    "    mcmc_samples = bayesian_model.MarkovChainSampler(\n",
+    "        array([775., 1./12, pi/2., 81./12]),    # Initial guess of the parameters\n",
+    "        likelihood=bayesian_model.log_joint_simple_sinusoid,    \n",
+    "        args=(array([770., 0., -pi, 0.]), array([780., 5., pi, 15.])) # Upper and lower bounds\n",
+    "    )   \n",
+    "\n",
+    "    return  mean(mcmc_samples, axis=0)  # Return the distribution means"
    ]
   },
   {
@@ -43,11 +49,7 @@
     "carbon_box_model = load_presaved_model(     # Generating the CarbobBoxModel using ticktack\n",
     "    \"Guttler14\",                            # Selecting an arbitrary model \n",
     "    production_rate_units=\"atoms/cm^2/s\"    # Units of the model\n",
-    ")\n",
-    "\n",
-    "bayesian_model = SingleFitter(carbon_box_model)   # Fitting a model \n",
-    "bayesian_model.prepare_function(model=\"simple_sinusoid\") # Generating the simple sin model\n",
-    "bayesian_model.load_data(data_sets[8])   # Loading the data into the model  "
+    ")"
    ]
   },
   {
@@ -56,85 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mcmc_samples = bayesian_model.MarkovChainSampler(\n",
-    "    array([775., 1./12, pi/2., 81./12]), \n",
-    "    likelihood=bayesian_model.log_joint_simple_sinusoid,\n",
-    "    args=(array([770., 0., -pi, 0.]), array([780., 5., pi, 15.])))\n",
-    "mean(mcmc_samples, axis=0)"
+    "carbon_box_model.run(arange())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running burn-in...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 500/500 [01:06<00:00,  7.50it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running production...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1000/1000 [02:10<00:00,  7.64it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "template = get_model(\"Guttler14\", data_sets[8])\n",
-    "parameters = get_production_function(template)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So I now need to think about extracting the internals of the functions. I might keep them for now, but I dislike it."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DeviceArray([773.63991719,   0.81313909,   2.39273268,   6.01649158], dtype=float64)"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "template.dc14(parameters)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
