--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -10,46 +10,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "from os import getcwd\n",
     "from ticktack.fitting import SingleFitter\n",
     "from ticktack import load_presaved_model\n",
-    "from jax.numpy import array, pi, mean"
+    "from jax.numpy import array, pi, mean, arange"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_template_parameters(carbon_box_model):\n",
-    "    bayesian_model = SingleFitter(carbon_box_model)   # Fitting a model \n",
-    "    bayesian_model.prepare_function(model=\"simple_sinusoid\") # Generating the simple sin model\n",
-    "    bayesian_model.load_data(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\")   \n",
-    "\n",
-    "    mcmc_samples = bayesian_model.MarkovChainSampler(\n",
-    "        array([775., 1./12, pi/2., 81./12]),    # Initial guess of the parameters\n",
-    "        likelihood=bayesian_model.log_joint_simple_sinusoid,    \n",
-    "        args=(array([770., 0., -pi, 0.]), array([780., 5., pi, 15.])) # Upper and lower bounds\n",
-    "    )   \n",
-    "\n",
-    "    return  mean(mcmc_samples, axis=0)  # Return the distribution means"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running burn-in...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 500/500 [00:52<00:00,  9.60it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running production...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [01:33<00:00, 10.68it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "carbon_box_model = load_presaved_model(     # Generating the CarbobBoxModel using ticktack\n",
     "    \"Guttler14\",                            # Selecting an arbitrary model \n",
     "    production_rate_units=\"atoms/cm^2/s\"    # Units of the model\n",
-    ")"
+    ")\n",
+    "\n",
+    "bayesian_model = SingleFitter(carbon_box_model)   # Fitting a model \n",
+    "bayesian_model.prepare_function(model=\"simple_sinusoid\") # Generating the simple sin model\n",
+    "bayesian_model.load_data(f\"{getcwd()}/datasets/775AD/NH/Miyake12_Cedar.csv\")   \n",
+    "\n",
+    "mcmc_samples = bayesian_model.MarkovChainSampler(\n",
+    "    array([775., 1./12, pi/2., 81./12]),    # Initial guess of the parameters\n",
+    "    likelihood=bayesian_model.log_joint_simple_sinusoid,    \n",
+    "    args=(array([770., 0., -pi, 0.]), array([780., 5., pi, 15.])) # Upper and lower bounds\n",
+    ")   \n",
+    "\n",
+    "start_date, duration, phase, area = mean(mcmc_samples, axis=0)  # Return the distribution means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template_dates = arange(int(start_date) - 25, int(start_date) + 25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "run() missing 1 required positional argument: 'production'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_18588/1226880704.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcarbon_box_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime_out\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtemplate_dates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moversample\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m108\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_C_14\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m707\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "    \u001b[0;31m[... skipping hidden 12 frame]\u001b[0m\n",
+      "\u001b[0;32m~/.local/lib/python3.8/site-packages/jax/linear_util.py\u001b[0m in \u001b[0;36mcall_wrapped\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 166\u001b[0;31m       \u001b[0mans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    167\u001b[0m     \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m       \u001b[0;31m# Some transformations yield from inside context managers, so we have to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: run() missing 1 required positional argument: 'production'"
+     ]
+    }
+   ],
+   "source": [
+    "carbon_box_model.run(time_out=template_dates, oversample=108, target_C_14=707)"
    ]
   },
   {
@@ -57,9 +110,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "carbon_box_model.run(arange())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
