Working run using `cbm.run`

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 500/500 [00:52<00:00,  9.60it/s]\n"
+      "100%|██████████| 500/500 [00:41<00:00, 11.94it/s]\n"
      ]
     },
     {
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [01:33<00:00, 10.68it/s]\n"
+      "100%|██████████| 1000/1000 [01:27<00:00, 11.38it/s]\n"
      ]
     }
    ],
@@ -68,41 +68,49 @@
     "    array([775., 1./12, pi/2., 81./12]),    # Initial guess of the parameters\n",
     "    likelihood=bayesian_model.log_joint_simple_sinusoid,    \n",
     "    args=(array([770., 0., -pi, 0.]), array([780., 5., pi, 15.])) # Upper and lower bounds\n",
-    ")   \n",
-    "\n",
-    "start_date, duration, phase, area = mean(mcmc_samples, axis=0)  # Return the distribution means"
+    ")   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template_dates = arange(int(start_date) - 25, int(start_date) + 25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "run() missing 1 required positional argument: 'production'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_18588/1226880704.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcarbon_box_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtime_out\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtemplate_dates\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moversample\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m108\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_C_14\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m707\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "    \u001b[0;31m[... skipping hidden 12 frame]\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.8/site-packages/jax/linear_util.py\u001b[0m in \u001b[0;36mcall_wrapped\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    164\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 166\u001b[0;31m       \u001b[0mans\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    167\u001b[0m     \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    168\u001b[0m       \u001b[0;31m# Some transformations yield from inside context managers, so we have to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: run() missing 1 required positional argument: 'production'"
-     ]
+     "data": {
+      "text/plain": [
+       "(DeviceArray([[ 134.89141868,  709.60871501, 1191.75522842, ...,\n",
+       "               1808.40827592,  665.96078961, 7348.8025404 ],\n",
+       "              [ 134.89220763,  709.60905505, 1191.75522861, ...,\n",
+       "               1808.40827592,  665.96078961, 7348.8025404 ],\n",
+       "              [ 134.89295021,  709.60937891, 1191.75522917, ...,\n",
+       "               1808.40827592,  665.96078961, 7348.8025404 ],\n",
+       "              ...,\n",
+       "              [ 135.20188588,  711.95605407, 1196.02857066, ...,\n",
+       "               1808.91523182,  666.13008388, 7348.83757498],\n",
+       "              [ 135.20764908,  711.95884778, 1196.02676052, ...,\n",
+       "               1808.915419  ,  666.13014662, 7348.83758899],\n",
+       "              [ 135.21341968,  711.96166807, 1196.02495542, ...,\n",
+       "               1808.91560608,  666.13020932, 7348.837603  ]],            dtype=float64),\n",
+       " DeviceArray([1.34891419e+02, 7.09608715e+02, 1.19175523e+03,\n",
+       "              3.97248139e+00, 4.51603166e+04, 1.55628969e+02,\n",
+       "              6.34361837e+02, 4.23744476e+02, 1.80840828e+03,\n",
+       "              6.65960790e+02, 7.34880254e+03], dtype=float64))"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "carbon_box_model.run(time_out=template_dates, oversample=108, target_C_14=707)"
+    "concentrations, final_concentrations = carbon_box_model.run(\n",
+    "    time_out=arange(750, 800), \n",
+    "    oversample=108, \n",
+    "    production=bayesian_model.production, \n",
+    "    steady_state_production=1.88,\n",
+    "    args = mean(mcmc_samples, axis=0)\n",
+    ")"
    ]
   },
   {
