Semi-working implementation of `SingleFitter.dc14()` template

--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
     "from os import getcwd\n",
     "from ticktack.fitting import SingleFitter\n",
     "from ticktack import load_presaved_model\n",
-    "from jax.numpy import array, pi, mean, arange"
+    "from jax.numpy import array, pi, mean, arange, full"
    ]
   },
   {
@@ -73,44 +73,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(DeviceArray([[ 134.89141868,  709.60871501, 1191.75522842, ...,\n",
-       "               1808.40827592,  665.96078961, 7348.8025404 ],\n",
-       "              [ 134.89220763,  709.60905505, 1191.75522861, ...,\n",
-       "               1808.40827592,  665.96078961, 7348.8025404 ],\n",
-       "              [ 134.89295021,  709.60937891, 1191.75522917, ...,\n",
-       "               1808.40827592,  665.96078961, 7348.8025404 ],\n",
-       "              ...,\n",
-       "              [ 135.20188588,  711.95605407, 1196.02857066, ...,\n",
-       "               1808.91523182,  666.13008388, 7348.83757498],\n",
-       "              [ 135.20764908,  711.95884778, 1196.02676052, ...,\n",
-       "               1808.915419  ,  666.13014662, 7348.83758899],\n",
-       "              [ 135.21341968,  711.96166807, 1196.02495542, ...,\n",
-       "               1808.91560608,  666.13020932, 7348.837603  ]],            dtype=float64),\n",
-       " DeviceArray([1.34891419e+02, 7.09608715e+02, 1.19175523e+03,\n",
-       "              3.97248139e+00, 4.51603166e+04, 1.55628969e+02,\n",
-       "              6.34361837e+02, 4.23744476e+02, 1.80840828e+03,\n",
-       "              6.65960790e+02, 7.34880254e+03], dtype=float64))"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "concentrations, final_concentrations = carbon_box_model.run(\n",
-    "    time_out=arange(750, 800), \n",
-    "    oversample=108, \n",
-    "    production=bayesian_model.production, \n",
-    "    steady_state_production=1.88,\n",
-    "    args = mean(mcmc_samples, axis=0)\n",
-    ")"
+    "# concentrations, final_concentrations = carbon_box_model.run(\n",
+    "#     time_out=arange(750, 800), \n",
+    "#     oversample=108, \n",
+    "#     production=bayesian_model.production, \n",
+    "#     steady_state_production=1.88,\n",
+    "#     args = mean(mcmc_samples, axis=0)\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bayesian_model.annual = arange(750, 800)\n",
+    "bayesian_model.mask = full((50,), 1)\n",
+    "bayesian_model.dc14(mean(mcmc_samples, axis=0))"
    ]
   },
   {
