--- a/Python IR/get_template.ipynb
+++ b/Python IR/get_template.ipynb
@@ -10,27 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'csvwriter' from 'csv' (/home/jordan/anaconda3/envs/ticktack/lib/python3.8/csv.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_18588/2731168920.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mticktack\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_presaved_model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mjax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marange\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfull\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcsv\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcsvwriter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'csvwriter' from 'csv' (/home/jordan/anaconda3/envs/ticktack/lib/python3.8/csv.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from os import getcwd\n",
     "from ticktack.fitting import SingleFitter\n",
     "from ticktack import load_presaved_model\n",
     "from jax.numpy import array, pi, mean, arange, full\n",
-    "import csv"
+    "from csv import writer"
    ]
   },
   {
@@ -90,22 +78,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bayesian_model.annual = arange(750, 800)\n",
-    "bayesian_model.mask = full((50,), True, dtype=bool)\n",
+    "bayesian_model.annual = arange(750, 800)    # 50 year window with the event in the middle\n",
+    "bayesian_model.mask = full((50,), True, dtype=bool) # Include all 50 years\n",
     "\n",
-    "event_parameters = mean(mcmc_samples, axis=0)\n",
-    "null_event_parameters = array([*event_parameters[:-1], 0])\n",
+    "event_parameters = mean(mcmc_samples, axis=0)   # The mcmc fitted parameters\n",
+    "null_event_parameters = array([*event_parameters[:-1], 0])  # Removing the event\n",
     "\n",
-    "template = bayesian_model.dc14(params=event_parameters)\n",
-    "template -= bayesian_model.dc14(params=null_event_parameters)"
+    "template = bayesian_model.dc14(params=event_parameters) # Running the cbm \n",
+    "template -= bayesian_model.dc14(params=null_event_parameters)   # Removing the sinusoid "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"template.csv\", \"w\") as file: # Saving as a .csv\n",
+    "    constructor = writer(file)  \n",
+    "    constructor.writerow([\"year\", \"d14c\"])\n",
+    "    constructor.writerows(zip(bayesian_model.annual, template))"
+   ]
   }
  ],
  "metadata": {
