--- a/Python IR/injection_recovery.ipynb
+++ b/Python IR/injection_recovery.ipynb
@@ -12,8 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read the `.csv` using `astropy`, which has trivial sort methods."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,28 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DeviceArray([-4.0000e+00, -3.0000e+00, -2.0000e+00, ...,  1.2294e+04,\n",
-       "              1.2295e+04,  1.2296e+04], dtype=float32)"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "intcal20[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -73,10 +59,10 @@
     {
      "data": {
       "text/plain": [
-       "<ggplot: (8747502538358)>"
+       "<ggplot: (8747502536078)>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,6 +72,80 @@
     "    + geom_point()\n",
     "    + theme_bw()\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pandas import read_csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import with `pandas` and run with `JAX`. Measured before present (1950). We want to go along by `paper_reference` with a shorter template `30yrs`. The suess effect means that we don't want to include data from 1750ish forward."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intcal20 = read_csv(\"Annual_datasets.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lengths = [[paper_ref, len(intcal20[intcal20[\"paper_ref\"] == paper_ref])]\n",
+    "    for paper_ref in intcal20[\"paper_ref\"].unique()]\n",
+    "lengths.sort(key = lambda x: x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "intcal20 = intcal20[intcal20[\"paper_ref\"] == lengths[-1][0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pick a 100 year block and test the code. So I could fill in the 25 years before and 25 years after with the Intcal20 interpolated curve. Take all of Intcal20 and place the actual data into the interpolated data. This would require rescaling the data with a linear curve or something along those lines. Only test the injection recovery at te real years. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear combination of the basis vectors provided by the template, linear trend and constant.\n",
+    "$Ax = b$ simple linear regression with a 50 by 3 design matrix that is dotted with a 3 long position vector to produce the predicted d14c. The first row is just the template. The second is just rows and the final is just the year."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Resample the data with gaussian noise of the same magnitude as the error bars. Plot the amplitdues as a histogram. Calculate the chi squared statsitic and then do just trend and mean and calculate the difference in chi squared statistic. I choose the significance threshold of the resulting distribution.This gives the false positive rate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then you inject a number of small events and see if they are detected based on the thresholds you decided."
    ]
   }
  ],
